to fix width on IE11

--- a/src/stylesheets/components/_components.popup.scss
+++ b/src/stylesheets/components/_components.popup.scss
@@ -8,6 +8,9 @@
   display:flex;
   flex-direction: column;
   align-items: center;
+  > * {
+    width:100%;
+  }
 }
 
 .c-popup__btn {
